<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/usernamereg"
            android:layout_weight="1"
            android:textSize="20dp"
            android:layout_marginStart="10dp">
        </TextView>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/userReg"
            android:hint="@string/enter_username">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/passwordreg"
            android:layout_weight="1"
            android:textSize="20dp"
            android:layout_marginStart="10dp">
        </TextView>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/passReg"
            android:hint="@string/enter_password">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_weight="1"
            android:textSize="20dp"
            android:layout_marginStart="10dp">
        </TextView>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/emlReg"
            android:hint="@string/enter_email">
        </EditText>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="REGISTER"
        android:id="@+id/reg1"
        android:layout_gravity="center"
        android:background="@drawable/shape"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:textSize="20dp"
        android:textColorHighlight="@color/purple_700">
    </Button>
</LinearLayout>