<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/username"
        android:id="@+id/Username1"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:id="@+id/tekst1"
        android:hint="@string/username"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/password"
            android:id="@+id/Pasword1"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:id="@+id/tekst2"
            android:hint="@string/password"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/tekst3"
        android:layout_gravity="center"
        android:background="@drawable/shape"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:textColorHighlight="@color/purple_700">
    </Button>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:id="@+id/reg0"
        android:layout_gravity="center"
        android:background="@drawable/shape"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:textColorHighlight="@color/purple_700">
    </Button>
</LinearLayout>